package src.factorymethod;
public interface Relatorio {
    void gerar();
}
