package src.factorymethod;
public class RelatorioJSON implements Relatorio {
    @Override
    public void gerar() {
        System.out.println("Gerando relatório em formato JSON...");
        // Lógica para gerar JSON (simulada)
    }
}